:bug: Fix z-index issue with the Bard toolbar. Closes #756.

--- a/resources/sass/components/fieldtypes/bard.scss
+++ b/resources/sass/components/fieldtypes/bard.scss
@@ -19,6 +19,7 @@
     position: sticky;
     top: 0;
     padding: 4px 8px;
+    z-index: 1;
 
      button {
         @apply text-grey-80 rounded px-sm flex items-center justify-center text-base text-center;
